Ignore all media files in ab-test/t-test

--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,4 @@ hymenoptera_data/
 **/media/*.mov
 computer-vision/image-classification/ants-bees/media/sample.png
 computer-vision/image-classification/ants-bees/media/screenshot.png
-ab-test/t-test/media/errorbar.png
-ab-test/t-test/media/histogram.png
+ab-test/t-test/media/*
