--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,4 @@ hymenoptera_data/
 computer-vision/image-classification/ants-bees/media/sample.png
 computer-vision/image-classification/ants-bees/media/screenshot.png
 ab-test/t-test/media/*
-scrape/media/*
+scrape/jobinventory.com/media/*
