Added fraud detection

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ computer-vision/image-classification/ants-bees/media/screenshot.png
 ab-test/t-test/media/*
 scrape/jobinventory.com/media/*
 data-visualization/lets-plot/medium/*
+anomaly-detection/credit_card.arff
