--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -9,9 +9,9 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
-    # defaults:
-    #   run:
-    #     working-directory: website
+    defaults:
+      run:
+        working-directory: website
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
@@ -22,8 +22,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-      - name: Build website
-        run: npm run build
+      # - name: Build website
+      #   run: npm run build
 
       # - name: Deploy to GitHub Pages
       #   uses: peaceiris/actions-gh-pages@v3
