--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -14,14 +14,14 @@ jobs:
         working-directory: website
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: website/package-lock.json
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
+      #     cache: npm
+      #     cache-dependency-path: website/package-lock.json
 
-      - name: Install dependencies
-        run: npm ci
+      # - name: Install dependencies
+      #   run: npm ci
       # - name: Build website
       #   run: npm run build
 
