--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -9,11 +9,11 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: website
-    steps:
-      - uses: actions/checkout@v4
+    # defaults:
+    #   run:
+    #     working-directory: website
+    # steps:
+    #   - uses: actions/checkout@v4
       # - uses: actions/setup-node@v3
       #   with:
       #     node-version: 18
