--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -20,10 +20,10 @@ jobs:
           cache: npm
           cache-dependency-path: website/package-lock.json
 
-      # - name: Install dependencies
-      #   run: npm ci
-      # - name: Build website
-      #   run: npm run build
+      - name: Install dependencies
+        run: npm ci
+      - name: Build website
+        run: npm run build
 
       # - name: Deploy to GitHub Pages
       #   uses: peaceiris/actions-gh-pages@v3
