--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ ab-test/t-test/media/*
 scrape/jobinventory.com/media/*
 data-visualization/lets-plot/medium/*
 anomaly-detection/credit_card.arff
+hyper-optim/search
