--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -14,11 +14,11 @@ jobs:
         working-directory: website
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: website/package-lock.json
+          # cache-dependency-path: website/package-lock.json
 
       - name: Install dependencies
         run: npm ci
