--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          # cache-dependency-path: website/package-lock.json
+          cache-dependency-path: website/package-lock.json
 
       - name: Install dependencies
         run: npm ci
