Add ALGOLIA_APPID to environment variables

--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -12,6 +12,8 @@ jobs:
     defaults:
       run:
         working-directory: website
+    env:
+      ALGOLIA_APPID: ${{ secrets.ALGOLIA_APPID }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
